{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 262,
  "lineage": "605bd653-c965-8959-d9a1-dca578caa195",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d1144565ef819128",
            "domain": "vpc",
            "id": "eipalloc-02195859dc8337c28",
            "instance": "i-08d4abc836acaad4a",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-00a41a6b3505f88ce",
            "private_dns": "ip-10-0-1-161.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.161",
            "public_dns": "ec2-35-73-118-107.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.73.118.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-eip-a"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.a",
            "aws_security_group.test",
            "aws_subnet.public_1a",
            "data.aws_ssm_parameter.amzn2_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09e29732c35294c2c",
            "domain": "vpc",
            "id": "eipalloc-062c7d0fc6ceac04a",
            "instance": "i-02257bb2784bd81cf",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0d4610cf5c858834f",
            "private_dns": "ip-10-0-2-161.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.161",
            "public_dns": "ec2-35-73-23-78.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.73.23.78",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-eip-c"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.c",
            "aws_security_group.test",
            "aws_subnet.public_1c",
            "data.aws_ssm_parameter.amzn2_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06098fd00463352b6",
            "arn": "arn:aws:ec2:ap-northeast-1:671981780043:instance/i-08d4abc836acaad4a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08d4abc836acaad4a",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "test-hoge",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00a41a6b3505f88ce",
            "private_dns": "ip-10-0-1-161.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.161",
            "public_ip": "18.183.229.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0efe6a2b749548593",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-040d3ed63b8bfa64d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020cf2762b2deeea8",
            "tags": {
              "Name": "test-ec2-a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-040d3ed63b8bfa64d"
            ]
          },
          "dependencies": [
            "aws_security_group.test",
            "aws_subnet.public_1a",
            "data.aws_ssm_parameter.amzn2_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06098fd00463352b6",
            "arn": "arn:aws:ec2:ap-northeast-1:671981780043:instance/i-02257bb2784bd81cf",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02257bb2784bd81cf",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "test-hoge",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d4610cf5c858834f",
            "private_dns": "ip-10-0-2-161.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.161",
            "public_ip": "3.112.25.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ccf309b1be09f82d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-040d3ed63b8bfa64d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a77fe144ceac1469",
            "tags": {
              "Name": "test-ec2-c"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-040d3ed63b8bfa64d"
            ]
          },
          "dependencies": [
            "aws_security_group.test",
            "aws_subnet.public_1c",
            "data.aws_ssm_parameter.amzn2_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:671981780043:internet-gateway/igw-07b3343faf61dbcea",
            "id": "igw-07b3343faf61dbcea",
            "owner_id": "671981780043",
            "tags": {
              "Name": "test-internet-gateway"
            },
            "vpc_id": "vpc-031be7e3a0eb411f6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "for_webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:671981780043:loadbalancer/app/webserver-alb/46a8788b81451a8f",
            "arn_suffix": "app/webserver-alb/46a8788b81451a8f",
            "dns_name": "webserver-alb-1972522434.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:671981780043:loadbalancer/app/webserver-alb/46a8788b81451a8f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webserver-alb",
            "security_groups": [
              "sg-080b9ad3aa48dcf88"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-020cf2762b2deeea8"
              },
              {
                "subnet_id": "subnet-0a77fe144ceac1469"
              }
            ],
            "subnets": [
              "subnet-020cf2762b2deeea8",
              "subnet-0a77fe144ceac1469"
            ],
            "vpc_id": "vpc-031be7e3a0eb411f6",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_1a",
            "aws_subnet.public_1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "for_webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:671981780043:listener/app/webserver-alb/46a8788b81451a8f/ecc405977d4c5379",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:671981780043:targetgroup/for-webserver-lb-tg/e2fdcf4cc211ee1e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:671981780043:listener/app/webserver-alb/46a8788b81451a8f/ecc405977d4c5379",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:671981780043:loadbalancer/app/webserver-alb/46a8788b81451a8f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.for_webserver",
            "aws_lb_target_group.for_webserver",
            "aws_security_group.alb",
            "aws_subnet.public_1a",
            "aws_subnet.public_1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "forward",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:671981780043:targetgroup/for-webserver-lb-tg/e2fdcf4cc211ee1e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:671981780043:listener-rule/app/webserver-alb/46a8788b81451a8f/ecc405977d4c5379/791fa2cd3dd0ee11",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:671981780043:listener-rule/app/webserver-alb/46a8788b81451a8f/ecc405977d4c5379/791fa2cd3dd0ee11",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:671981780043:listener/app/webserver-alb/46a8788b81451a8f/ecc405977d4c5379",
            "priority": 99
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.for_webserver",
            "aws_lb_listener.for_webserver",
            "aws_lb_target_group.for_webserver",
            "aws_security_group.alb",
            "aws_subnet.public_1a",
            "aws_subnet.public_1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "for_webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:671981780043:targetgroup/for-webserver-lb-tg/e2fdcf4cc211ee1e",
            "arn_suffix": "targetgroup/for-webserver-lb-tg/e2fdcf4cc211ee1e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:671981780043:targetgroup/for-webserver-lb-tg/e2fdcf4cc211ee1e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "for-webserver-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-031be7e3a0eb411f6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "for_webserver_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:671981780043:targetgroup/for-webserver-lb-tg/e2fdcf4cc211ee1e-20210408102133681200000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:671981780043:targetgroup/for-webserver-lb-tg/e2fdcf4cc211ee1e",
            "target_id": "i-08d4abc836acaad4a"
          },
          "dependencies": [
            "aws_instance.a",
            "aws_lb_target_group.for_webserver",
            "aws_security_group.test",
            "aws_subnet.public_1a",
            "data.aws_ssm_parameter.amzn2_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "for_webserver_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:671981780043:targetgroup/for-webserver-lb-tg/e2fdcf4cc211ee1e-20210408102113246900000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:671981780043:targetgroup/for-webserver-lb-tg/e2fdcf4cc211ee1e",
            "target_id": "i-02257bb2784bd81cf"
          },
          "dependencies": [
            "aws_instance.c",
            "aws_lb_target_group.for_webserver",
            "aws_security_group.test",
            "aws_subnet.public_1c",
            "data.aws_ssm_parameter.amzn2_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07b3343faf61dbcea",
            "id": "r-rtb-040c04c3391b81d111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-040c04c3391b81d11",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:671981780043:route-table/rtb-040c04c3391b81d11",
            "id": "rtb-040c04c3391b81d11",
            "owner_id": "671981780043",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b3343faf61dbcea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-route-table"
            },
            "vpc_id": "vpc-031be7e3a0eb411f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cc6fe71a467cf6f",
            "route_table_id": "rtb-040c04c3391b81d11",
            "subnet_id": "subnet-020cf2762b2deeea8"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afc13ff3b4a313f1",
            "route_table_id": "rtb-040c04c3391b81d11",
            "subnet_id": "subnet-0a77fe144ceac1469"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_1c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:671981780043:security-group/sg-080b9ad3aa48dcf88",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080b9ad3aa48dcf88",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "671981780043",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-031be7e3a0eb411f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:671981780043:security-group/sg-040d3ed63b8bfa64d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040d3ed63b8bfa64d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-security-group",
            "name_prefix": "",
            "owner_id": "671981780043",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-031be7e3a0eb411f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1349017791",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-040d3ed63b8bfa64d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.test",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-362664860",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-040d3ed63b8bfa64d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.test",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2736229929",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-040d3ed63b8bfa64d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.test",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:671981780043:subnet/subnet-020cf2762b2deeea8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-020cf2762b2deeea8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671981780043",
            "tags": {
              "Name": "test-subnet-public-1a"
            },
            "tags_all": {
              "Name": "test-subnet-public-1a"
            },
            "vpc_id": "vpc-031be7e3a0eb411f6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:671981780043:subnet/subnet-0a77fe144ceac1469",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a77fe144ceac1469",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671981780043",
            "tags": {
              "Name": "test-subnet-public-1c"
            },
            "tags_all": {
              "Name": "test-subnet-public-1c"
            },
            "vpc_id": "vpc-031be7e3a0eb411f6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:671981780043:vpc/vpc-031be7e3a0eb411f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05e54682c1ce76a57",
            "default_route_table_id": "rtb-04eb88ffa1fdab760",
            "default_security_group_id": "sg-0c776d4a5ecced889",
            "dhcp_options_id": "dopt-b9a3a2de",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-031be7e3a0eb411f6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04eb88ffa1fdab760",
            "owner_id": "671981780043",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}